# m2tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  flags.mk  linker_ide.sh  open_ide.sh
archiver/: CMakeLists.txt  archiver.c  main.c
assembler/: .gitignore  CMakeLists.txt  Makefile  asm_util.c  asm_util.h  assembler.c  common_defs.h  file_gen.c  file_gen.h  main.c  notes  pass1.c  pass1.h  pass2.c  pass2.h  symbol_table.c  symbol_table.h  tokenizer.c  tokenizer.h  util.c  util.h
assembler/inc/: file_gen.h  pass1.h  pass2.h  symbol_table.h  tokenizer.h  util.h
assembler/src/: file_gen.c  main.c  pass1.c  pass2.c  symbol_table.c  tokenizer.c  util.c
doc/: README.md  architectures.md  build.md  introduction.md  porting.md  usage.md
isalib/: isa.c  isa.h
junk/: Makefile  flags.mk  objlib_test.c  rom.mif  rules.mk  sllib_test.c  test.ldm  test.lds
junk/asm_test/: t.asm  t2.asm  test.asm  test2.asm  test3.asm  test_dat.asm  test_defhell.asm  test_export_import.asm  test_include.asm  test_only_instru.asm  test_xxx.asm
junk/ldmlib/: ldm.c
junk/ldmtest/: CMakeLists.txt  ldmtest.c
junk/lib-ldm/: ldm.c
junk/linker_testing_code/: code_a.asm  code_b.asm  code_c.asm  code_d.asm  test.lds
junk/loader/: sender.c  sender.h
junk/miflib/: mif.h
junk/test_objlib/: Makefile
junk/test_objlib/src/: main.c
ldm2mif/: main.c
ldm2mif/inc/: args.h  error.h  help.h  ldm2mif.h  relocator.h
ldm2mif/src/: args.c  error.c  help.c  ldm2mif.c  main.c  relocator.c
ldmlib/: CMakeLists.txt  ldm.c  ldm.h
lib-isa/: CMakeLists.txt  isa.c
lib-microtar/: CMakeLists.txt
lib-obj/: CMakeLists.txt  obj.c  obj.h
lib-sl/: CMakeLists.txt  sl.c
lib/filelib/: CMakeLists.txt  README.md
lib/filelib/include/: filelib.h
lib/filelib/src/: _filelib.h  _obj.h  common.c  common.h  ldm.c  ldm.h  loading_loop.c  loading_loop.h  mif.c  mif.h  obj.c  obj.h  sl.c  sl.h  struct_check.c  struct_check.h  writing_loop.c  writing_loop.h
lib/filelib/test/: ldm_test.c  ldm_test.h  main.c  mif_test.c  mif_test.h  obj_test.c  obj_test.h  sl_test.c  sl_test.h  test_common.c  test_common.h
lib/platformlib/: CMakeLists.txt  README.md
lib/platformlib/include/: platformlib.h
lib/platformlib/src/: platformlib_common.c  platformlib_common.h  platformlib_private.h
lib/platformlib/targets/: platformlib_target_specific.h
lib/platformlib/targets/example/: README.txt  datatypes.h  example.c  instructions_description.h  miscellaneous.h
lib/platformlib/targets/example/include/: platformlib_target_specific.h
lib/platformlib/targets/i8080/: assemble.c  assemble.h  datatypes.c  datatypes.h  instructions_description.c  instructions_description.h  miscellaneous.c  miscellaneous.h  opcode_decode.h
lib/platformlib/targets/i8080/include/: platformlib_target_specific.h
libs/: .gitignore  Doxyfile  Makefile
libs/inc/: isa.h  ldm.h  mif.h  obj.h
libs/src/: libm2-isa.c  libm2-ldm.c  libm2-mif.c  libm2-obj.c
linker/: CMakeLists.txt  ldparser.c  ldparser.h  linker.c  linker_util.c  linker_util.h  ln_section_list.c  ln_section_list.h  ln_symbol_list.c  ln_symbol_list.h  ln_symbol_table.c  ln_symbol_table.h
loader/: Makefile  main.c  sender.c
loader/inc/: args.h  error.h  help.h  sender.h
loader/src/: args.c  error.c  help.c  main.c  relocator.c  sender.c
miflib/: CMakeLists.txt  mif.c  mif.h
objdump/: main.c
objlib/: obj.c  obj.h
objlib_test/: Makefile
objread/: CMakeLists.txt  main.c  objread.c
sllib/: sl.c  sl.h
src/archiver/: archiver.c
src/assembler/: assembler.c  common.c  common.h  filegen.c  filegen.h  pass1.c  pass1.h  pass2.c  pass2.h  pass_item.c  pass_item.h  preprocessor.c  preprocessor.h  preprocessor_symbol_table.c  preprocessor_symbol_table.h  section_table.c  section_table.h  symbol_table.c  symbol_table.h  verbose.c  verbose.h
src/ldmdump/: ihex_backend.c  ihex_backend.h  ldmdump.c  ldmdump.h  mif_backend.c  mif_backend.h
src/linker/: cache.c  cache.h  common.c  common.h  ldparser.c  ldparser.h  link.c  link.h  linker.c
src/objread/: objread.c
