cmake_minimum_required(VERSION 3.2.0)
project(m2tools C)

set(CMAKE_BUILD_TYPE Debug)
set(BUILD_STATIC_LIBS ON)

set(target_prefix "m2")
set(target_arch_name "MARK_II")
set(ver_string "v1.0 Alpha")

add_definitions(-DVERSION="${ver_string}")
add_definitions(-DTARGET_ARCH_NAME="${target_arch_name}")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wformat-nonliteral")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wcast-align")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Winline")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wundef")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wnested-externs")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wcast-qual")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wwrite-strings")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused-parameter")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wextra")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wshadow")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wpointer-arith")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wmissing-prototypes")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wstrict-prototypes")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wbad-function-cast")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wunused")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wuninitialized")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wmissing-declarations")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wlogical-op")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Waggregate-return")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfloat-equal")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wswitch-enum")
#~ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wpadded")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wconversion")

#define libraries targets
add_subdirectory(./isalib)
add_subdirectory(./objlib)
add_subdirectory(./microtarlib)
add_subdirectory(./sllib)
add_subdirectory(./ldmlib)

#define executable targets
add_subdirectory(./assembler)
add_subdirectory(./archiver)
add_subdirectory(./objread)
add_subdirectory(./linker)

add_subdirectory(./ldmtest)
